Mpm-Smart/Web.Host/aspirate-output/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /http
        pathType: Prefix
        backend:
          service:
            name: web-server
            port:
              number: 8080
      - path: /https
        pathType: Prefix
        backend:
          service:
            name: web-server
            port:
              number: 8443
